--- a/traefik-stack.yml
+++ b/traefik-stack.yml
@@ -1,27 +1,39 @@
-  version: '3'
-  services:
-    traefik:
-      image: traefik
-      networks:
-        - traefik-net
-      ports:
-        - "8080:80"
-        - "8443:443"
-        - "8090:8080"
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-        - /docker/projetos/traefik/config:/etc/traefik
-      command: traefik --web -l DEBUG --docker --docker.swarmmode --docker.watch -c /etc/traefik/traefik.toml
-      deploy:
-        placement:
-            constraints: [node.role == manager]
-      labels:
-      - traefik.enable=true
-      - traefik.backend=traefik
-      - traefik.frontend.rule=Host:traefik.sertao.ifrs.edu.br
-      - traefik.port=8080
-      - traefik.docker.network=traefik-net         
-            
+version: '3.3'
+
+#networks:
+#  swarm_overlay:
+#    external:
+#      name: traefik-net
+
+services:
+  traefik:
+    image: traefik
+#    command: --docker --docker.swarmmode --docker.domain=${DOMAIN} --docker.watch --web DEBUG
+#     command: --docker --docker.swarmmode --docker.watch  --web -l DEBUG
+    command: --web --docker --docker.swarmmode --docker.watch --docker.domain=sertao.ifrs.edu.br --logLevel=DEBUG
+    deploy:
+      placement:
+        constraints: [ node.role == manager ]
+    # docker in docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      # if not using docker configs
+      - /docker/projetos/traefik/config:/etc/traefik/traefik.toml
+    ports:
+      - 80:80
+      - 8080:8080
+      - 443:443
+    networks:
+      - traefik-net
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=traefik"
+      - "traefik.frontend.rule=Host:traefik.sertao.ifrs.edu.br"
+      - "traefik.port=8080"
+      - "traefik.docker.network=traefik-net"
+
 networks:
   traefik-net:
     driver: overlay
+    external: true
+#    attachable: true
