--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#Moodle
+#moodle
 ALLOW_EMPTY_PASSWORD=yes
 APACHE_HTTPS_PORT_NUMBER=443
 APACHE_HTTP_PORT_NUMBER=80
@@ -26,3 +26,4 @@ MOODLE_USERNAME=admin
 #SMTP_PORT=
 #SMTP_PROTOCOL=
 #SMTP_USER=
+
