--- a/rocket-stack.yml
+++ b/rocket-stack.yml
@@ -45,4 +45,43 @@ services:
       - traefik-net
       - rocket-net
       
+  mongo-init-replica:
+    image: mongo:3.2
+    command: 'mongo mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''l$
+    depends_on:
+      - mongo
+    networks:
+      - traefik-net
+      - rocket-net
+
+#  hubot:
+#    image: rocketchat/hubot-rocketchat:latest
+#    environment:
+#      - ROCKETCHAT_URL=rocketchat:3000
+#      - ROCKETCHAT_ROOM=GENERAL
+#      - ROCKETCHAT_USER=bot
+#      - ROCKETCHAT_PASSWORD=botpassword
+#      - BOT_NAME=bot
+#  # you can add more scripts as you'd like here, they need to be installable by npm
+#      - EXTERNAL_SCRIPTS=hubot-help,hubot-seen,hubot-links,hubot-diagnostics
+#    depends_on:
+#      - rocketchat
+#    labels:
+#      - "traefik.enable=false"
+#    volumes:
+#      - ./scripts:/home/hubot/scripts
+#  # this is used to expose the hubot port for notifications on the host on port 3001, e.g. for hubot-j$
+#    ports:
+#      - 3001:8080
+#    networks:
+#      - traefik-net
+#      - rocket-net
+
+
+networks:
+  traefik-net:
+     external: true
+  rocket-net:
+    driver: overlay      
+      
   
